# optymalizacja

./: .gitignore  CMakeLists.txt
TSP_MST/: main.cpp
ant_colony/: CMakeLists.txt  main.cpp
backpack/: CMakeLists.txt  main.cpp
euler/: main.cpp
graph_coloring/: CMakeLists.txt  main.cpp
hungarian/: main.cpp
maximum_matching/: main.cpp
src/: BinaryTree.h  Bipariate.cpp  Bipariate.h  Bipartiate.cpp  Bipartiate.h  Digraph.cpp  Digraph.h  EulerCycle.cpp  EulerCycle.h  Graph.cpp  Graph.h  GraphColoring.cpp  GraphColoring.h  GraphConverters.h  Hungarian.cpp  Hungarian.h  IOHelpers.h  Matching.cpp  Matching.h  MatrixGraph.cpp  MatrixGraph.h  TSP.h  std_extensions.h
tests/: CMakeLists.txt  test_btree.cpp  test_euler.cpp  test_matching.cpp  test_tsp.cpp
tsp_branch_and_bound/: CMakeLists.txt  main.cpp
tsp_mst/: CMakeLists.txt  main.cpp
